Fix figure + paragraph wrapping

--- a/assets/styles/base/_article.scss
+++ b/assets/styles/base/_article.scss
@@ -66,6 +66,10 @@
       &:first-child {
         @include trailing(0);
       }
+
+      + p:first-of-type {
+        overflow: visible !important;
+      }
     }
 
     // &:nth-of-type(odd) {
